fixed x button on mobile

--- a/style.css
+++ b/style.css
@@ -147,4 +147,14 @@ input[type="time"]:hover {
  .note{
   margin-left: 10%;
  }
+.close-button{
+  opacity: 1;
+  color: white;
+  background-color: red;
+  border: 10px;
+  opacity: 1;
+  padding: 5px;
+  border-radius: 20px;
+}
+
 }
